ajout formulaires Ticket et TicketRegister + templates

--- a/src/DAO/TicketingBundle/Resources/views/Ticket/index.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/index.html.twig
@@ -6,7 +6,14 @@
     <title>Billeterie du Louvre</title>
   </head>
   <body>
+    <img src = "logoLouvre.jpg" alt = "logo"/>
     <h1>Billeterie du Louvre</h1>
+
+    <p> Bienvenue sur le site de la billeterie en ligne du musée du Louvre, pour continuer cliquer sur le bouton suivant : </p>
+    <a href="{{ path('dao_ticketing_date') }}" class="btn btn-danger">
+      <i class="glyphicon glyphicon-trash"></i>
+      Suivant
+    </a>
 
   </body>
 </html>
