--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
@@ -9,22 +9,22 @@
 
   <div class="form-group">
     {# Génération du label. #}
-    {{ form_label(form.nomVisiteur, "Nom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+    {{ form_label(form.nom, "Nom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
 
     {# Affichage des erreurs pour ce champ précis. #}
-    {{ form_errors(form.nomVisiteur) }}
+    {{ form_errors(form.nom) }}
 
     <div class="col-sm-10">
       {# Génération de l'input. #}
-      {{ form_widget(form.nomVisiteur, {'attr': {'class': 'form-control'}}) }}
+      {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
 
   <div class="form-group">
-    {{ form_label(form.prenomVisiteur, "Prénom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-    {{ form_errors(form.prenomVisiteur) }}
+    {{ form_label(form.prenom, "Prénom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+    {{ form_errors(form.prenom) }}
     <div class="col-sm-10">
-      {{ form_widget(form.prenomVisiteur, {'attr': {'class': 'form-control'}}) }}
+      {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
 
@@ -37,10 +37,10 @@
   </div>
 
   <div class="form-group">
-    {{ form_label(form.birthVisiteur, "Date de naissance", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-    {{ form_errors(form.birthVisiteur) }}
+    {{ form_label(form.birthDate, "Date de naissance", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+    {{ form_errors(form.birthDate) }}
     <div class="col-sm-10">
-      {{ form_widget(form.birthVisiteur, {'attr': {'class': 'form-control'}}) }}
+      {{ form_widget(form.birthDate, {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
 
@@ -52,9 +52,13 @@
     </div>
   </div>
 
-    
+  {# Génération automatique des champs pas encore écrits.
+     Dans cet exemple, ce serait le champ CSRF (géré automatiquement par Symfony !)
+     et tous les champs cachés (type « hidden »). #}
+  {{ form_rest(form) }}
 
-
-
+  {# Fermeture de la balise <form> du formulaire HTML #}
+  {{ form_end(form) }}
+</div>
 
   
