--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -13,6 +13,8 @@
 
 {% block daoticketing_body %}
 
+  Commande en cours pour : {{ mailVisiteur }}
+
   <h2>Veuillez renseigner les informations des visiteurs :</h2>
 
   {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
