--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form.html.twig
@@ -2,7 +2,7 @@
 
 
 <div class="well">
-  {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+  {{ form_start(form, {'attr': {'class': 'form-horizontal'},'method': 'POST'}) }}
 
   {# Les erreurs générales du formulaire. #}
   {{ form_errors(form) }}
@@ -37,16 +37,22 @@
     </div>
   </div>
 
-  {% if form.reduced is defined %}
-    {{ form_row(form.reduced) }}
-  {% endif %}
+   <div class="form-group">
+    {{ form_label(form.mailVisiteur, "Votre mail", {'label_attr': {'class': 'col-sm-2 control-label'}}, {'method': 'POST'}) }}
+    {{ form_errors(form.mailVisiteur) }}
+    <div class="col-sm-10">
+      {{ form_widget(form.mailVisiteur, {'attr': {'class': 'form-control'}}, {'method': 'POST'}) }}
+    </div>
+  </div>
 
-  
+   {{ form_row(form.visitors) }}
+
+  {# Pour le bouton, pas de label ni d'erreur, on affiche juste le widget #}
+  {{ form_widget(form.Suivant, {'attr': {'class': 'btn btn-primary'}}) }}
 
 
-  {# Génération automatique des champs pas encore écrits.
-     Dans cet exemple, ce serait le champ CSRF (géré automatiquement par Symfony !)
-     et tous les champs cachés (type « hidden »). #}
+
+
   {{ form_rest(form) }}
 
   {# Fermeture de la balise <form> du formulaire HTML #}
@@ -61,18 +67,14 @@
 <script type="text/javascript">
   $(document).ready(function() {
     // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
-    var $container = $('div#advert_categories');
+    var $container = $('div#ticket_visitors');
     // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
-    var index = $container.find(':input').length;
-    // On ajoute un nouveau champ à chaque clic sur le lien d'ajout.
-    $('#add_category').click(function(e) {
-      addCategory($container);
-      e.preventDefault(); // évite qu'un # apparaisse dans l'URL
-      return false;
+    var index = $container.find('nbTickets');
+  
     });
     // On ajoute un premier champ automatiquement s'il n'en existe pas déjà un (cas d'une nouvelle annonce par exemple).
     if (index == 0) {
-      addCategory($container);
+      addVisitor($container);
     } else {
       // S'il existe déjà des catégories, on ajoute un lien de suppression pour chacune d'entre elles
       $container.children('div').each(function() {
@@ -80,7 +82,7 @@
       });
     }
     // La fonction qui ajoute un formulaire CategoryType
-    function addCategory($container) {
+    function addVisitor($container) {
       // Dans le contenu de l'attribut « data-prototype », on remplace :
       // - le texte "__name__label__" qu'il contient par le label du champ
       // - le texte "__name__" qu'il contient par le numéro du champ
@@ -112,3 +114,4 @@
     }
   });
 </script>
+
