--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -17,7 +17,14 @@
 
   <h2>Veuillez renseigner les informations des visiteurs :</h2>
 
-  {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
+
+ {% for i in 1..nbTickets %}
+  
+  Visiteur {{ loop.index }} sur {{ loop.length }} : 
+ {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
+  
+{% endfor%}
+
 
 
 
