ajout des formulaires imbriqués

--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -23,7 +23,9 @@
   Visiteur {{ loop.index }} sur {{ loop.length }} : 
  {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
   
-{% endfor%}
+ {% endfor%}
+
+ {{ form_widget(form.enregistrer, {'attr': {'class': 'btn btn-primary'}}) }}
 
 
 
