--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form.html.twig
@@ -67,9 +67,9 @@
 <script type="text/javascript">
   $(document).ready(function() {
     // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
-    var $container = $('div#ticket_visitors');
+    var $container = $('div#dao_ticketingbundle_ticket_visitors');
     // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
-    var index = $container.find('nbTickets');
+    var index = $container.find(':input').length;
   
     });
     // On ajoute un premier champ automatiquement s'il n'en existe pas déjà un (cas d'une nouvelle annonce par exemple).
