--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
@@ -1,70 +1,73 @@
 {# src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig #}
 
-
-<div class="well">
-  {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-
-  {# Les erreurs générales du formulaire. #}
-  {{ form_errors(form) }}
-
-  <div class="form-group">
-    {# Génération du label. #}
-    {{ form_label(form.nom, "Nom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-
-    {# Affichage des erreurs pour ce champ précis. #}
-    {{ form_errors(form.nom) }}
-
-    <div class="col-sm-10">
-      {# Génération de l'input. #}
-      {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
+<div class="form-group">
+  <label class="col-sm-2 control-label required"></label>
+  <div class="col-sm-10">
+    <div id="ticket_visitors___name__">
+      <div class="form-group">
+        <label class="col-sm-2 control-label required" for="ticket_visitors___name___nom">Nom</label>
+        <div class="col-sm-10">
+          <input type="text" id="ticket_visitors___name___nom" name="ticket[visitors][__name__][nom]" required="required" class="form-control" />
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-  <div class="form-group">
-    {{ form_label(form.prenom, "Prénom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-    {{ form_errors(form.prenom) }}
-    <div class="col-sm-10">
-      {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
+<div class="form-group">
+  <label class="col-sm-2 control-label required"></label>
+  <div class="col-sm-10">
+    <div id="ticket_visitors___name__">
+      <div class="form-group">
+        <label class="col-sm-2 control-label required" for="ticket_visitors___name___prenom">Prenom</label>
+        <div class="col-sm-10">
+          <input type="text" id="ticket_visitors___name___prenom" name="ticket[visitors][__name__][prenom]" required="required" class="form-control" />
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-  <div class="form-group">
-    {{ form_label(form.pays, "Pays", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-    {{ form_errors(form.pays) }}
-    <div class="col-sm-10">
-      {{ form_widget(form.pays, {'attr': {'class': 'form-control'}}) }}
+<div class="form-group">
+  <label class="col-sm-2 control-label required"></label>
+  <div class="col-sm-10">
+    <div id="ticket_visitors___name__">
+      <div class="form-group">
+        <label class="col-sm-2 control-label required" for="ticket_visitors___name___pays">Pays</label>
+        <div class="col-sm-10">
+          <input type="text" id="ticket_visitors___name___pays" name="ticket[visitors][__name__][pays]" required="required" class="form-control" />
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-  <div class="form-group">
-    {{ form_label(form.birthDate, "Date de naissance", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-    {{ form_errors(form.birthDate) }}
-    <div class="col-sm-10">
-      {{ form_widget(form.birthDate, {'attr': {'class': 'form-control'}}) }}
+<div class="form-group">
+  <label class="col-sm-2 control-label required"></label>
+  <div class="col-sm-10">
+    <div id="ticket_visitors___name__">
+      <div class="form-group">
+        <label class="col-sm-2 control-label required" for="ticket_visitors___name___birthDate">Date de naissance</label>
+        <div class="col-sm-10">
+          <input type="date" id="ticket_visitors___name___birthDate" name="ticket[visitors][__name__][birthDate]" required="required" class="form-control" />
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-  <div class="form-group">
-    {{ form_label(form.reduced, "Tarif réduit", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-    {{ form_errors(form.reduced) }}
-    <div class="col-sm-10">
-      {{ form_widget(form.reduced, {'attr': {'class': 'form-control'}}) }}
+<div class="form-group">
+  <label class="col-sm-2 control-label required"></label>
+  <div class="col-sm-10">
+    <div id="ticket_visitors___name__">
+      <div class="form-group">
+        <label class="col-sm-2 control-label required" for="ticket_visitors___name___reduced">Tarif réduit</label>
+        <div class="col-sm-10">
+          <input type="radio" id="ticket_visitors___name___reduced" name="ticket[visitors][__name__][reduced]" required="required" class="form-control" />
+        </div>
+      </div>
     </div>
   </div>
-
-  {# Fermeture de la balise <form> du formulaire HTML #}
-  {{ form_end(form) }}
 </div>
 
 
-{# On charge la bibliothèque jQuery. Ici, je la prends depuis le CDN google
-   mais si vous l'avez en local, changez simplement l'adresse. #}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-{# Voici le script en question : #}
-<script type="text/javascript">
-  $(document).ready(function() {
-  
-
-   
-</script>
