--- a/src/DAO/TicketingBundle/Resources/views/Ticket/dating.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/dating.html.twig
@@ -18,7 +18,8 @@
   {{ include("DAOTicketingBundle:Ticket:form.html.twig") }}
 
   
-
+  {# Pour le bouton, pas de label ni d'erreur, on affiche juste le widget #}
+  {{ form_widget(form.Suivant, {'attr': {'class': 'btn btn-primary'}}) }}
   
  
   
