ajout du code résa dans ticket et prix dans visitor

--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -16,7 +16,7 @@
   
 
    
- Commande en cours pour : {{ "ticket.mailVisiteur" }}
+ Commande en cours pour : {{ ticket.mailVisiteur }}
 
 
   <h2>Veuillez renseigner les informations des visiteurs :</h2>
