--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -10,6 +10,7 @@
     <h1>Billeterie du Louvre</h1>
 
 
+<body>
 
 {% block daoticketing_body %}
 
@@ -21,21 +22,8 @@
 
   <h2>Veuillez renseigner les informations des visiteurs :</h2>
 
-
-
-
-
  {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
 
-
- 
- 
-  
-
-
- 
-
-
-
-
 {% endblock %}
+
+</body>
