--- a/src/DAO/TicketingBundle/Resources/views/Ticket/base.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/base.html.twig
@@ -1,4 +1,5 @@
 {% extends 'DAOTicketingBundle:Ticket:form1.html.twig' %}
+<body>
 {% block body %}
 
 
@@ -14,3 +15,4 @@
 {% endfor %}
 </ul>
 {% endblock %}
+</body
