--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -1,29 +1,14 @@
 {# src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig #}
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Billeterie du Louvre</title>
-  </head>
-  <body>
-    <img src = "logoLouvre.jpg" alt = "logo"/>
-    <h1>Billeterie du Louvre</h1>
-
-
-<body>
+{% extends "DAOTicketingBundle::layout.html.twig" %}
 
 {% block daoticketing_body %}
-
   
+    <h2>Veuillez renseigner les informations des visiteurs :</h2>
+    Commande en cours pour : {{ ticket.mailVisiteur }}
 
-   
- Commande en cours pour : {{ ticket.mailVisiteur }}
-
-
-  <h2>Veuillez renseigner les informations des visiteurs :</h2>
-
- {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
+    {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
 
 {% endblock %}
 
-</body>
+
