--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
@@ -1,87 +1,37 @@
 {# src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig #}
 
-
-
-<!--<div id="formulaire_visiteur"></div>
-<form action="register" method="post">  
-  
-        <div class="form-group">
-          <label class="col-sm-2 control-label required" for="ticket_visitors___name___nom">Nom</label>
-          <div class="col-sm-10">
-            <input type="text" id="ticket_visitors___name___nom" name="ticket[visitors][__name__][nom]" required="required" class="form-control" />
-          </div>
-        </div>
-      
-
-  
-        <div class="form-group">
-          <label class="col-sm-2 control-label required" for="ticket_visitors___name___prenom">Prenom</label>
-          <div class="col-sm-10">
-            <input type="text" id="ticket_visitors___name___prenom" name="ticket[visitors][__name__][prenom]" required="required" class="form-control" />
-          </div>
-        </div>
-
-
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label required" for="ticket_visitors___name___pays">Pays</label>
-          <div class="col-sm-10">
-            <input type="text" id="ticket_visitors___name___pays" name="ticket[visitors][__name__][pays]" required="required" class="form-control" />
-          </div>
-        </div>
-
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label required" for="ticket_visitors___name___birthDate">Date de naissance</label>
-          <div class="col-sm-10">
-            <input type="date" id="ticket_visitors___name___birthDate" name="ticket[visitors][__name__][birthDate]" required="required" class="form-control" />
-          </div>
-        </div>
-  
-
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label required" for="ticket_visitors___name___reduced">Tarif réduit</label>
-          <div class="col-sm-10">
-            <input type="radio" id="ticket_visitors___name___reduced" name="ticket[visitors][__name__][reduced]" class="form-control" />
-          </div>
-        </div>
-
-         <div class="form-group">
-          
-          <div class="col-sm-10">
-            <input type="submit" id="ticket_visitors___name___enregistrer" name="ticket[visitors][__name__][enregistrer]" class="form-control" />
-          </div>
-        </div>
-
-</form> -->
-
-
-
 {{ form_start(form) }}
-<div class="ticket_visitor">
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6">
-                                {{ form_row(form.nom) }}
-                            </div>
-                            <div class="col-md-6 col-sm-6">
-                                {{ form_row(form.prenom) }}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6">
-                                {{ form_row(form.birthDate) }}
-                            </div>
-                            <div class="col-md-6 col-sm-6">
-                                {{ form_row(form.pays) }}
-                            </div>
-                        </div>
-                        {{ form_row(form.reduced) }} 
+<div class="well">
+  {{ form_start(form, {'attr': {'class': 'form-horizontal'},'method': 'POST'}) }}
+  <div class="ticket_visitor">
+    <div class="row">
+      <div class="col-md-6 col-sm-6">
+        {{ form_row(form.nom) }}
+      </div>
+    </div>
+
+    <div class="row">                        
+      <div class="col-md-6 col-sm-6">
+        {{ form_row(form.prenom) }}
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-md-6 col-sm-6">
+        {{ form_row(form.birthDate) }}
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 col-sm-6">
+        {{ form_row(form.pays) }}
+      </div>
+    </div>
+  
+{{ form_row(form.reduced) }} 
 {{ form_widget(form) }}
 {{ form_end(form) }}
 
-
-
-<input type="submit">
-
-
+    <input type="submit">
+  </div>
+</div>
