--- a/src/DAO/TicketingBundle/Resources/views/Ticket/recapitulatif.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/recapitulatif.html.twig
@@ -31,7 +31,7 @@
     </table>
 
     
-      <p>Le total de votre commande est de {{visitor.prix}} €</p>
+      <p>Le total de votre commande est de {{total}} €</p>
    
     
 
