ajout condition date passée, date selon type de billet, refactirisation en method pour calcul total

--- a/src/DAO/TicketingBundle/Resources/views/Mail/ticket.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Mail/ticket.html.twig
@@ -18,7 +18,7 @@
                 <table>
                     <tr>
                         <td>
-                         
+                            {# for i  in 1..visitor #}
                             <table class="summary">
                                 <tr>
                                     <th><p>Date de visite</p></th>
@@ -34,6 +34,7 @@
                                     <td> {{ ticket.getResaCode }} </td>
                                 </tr>
                             </table>
+                            {# endfor #}
                             <hr />
                         </td>
                     </tr>
