--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
@@ -1,37 +1,47 @@
 {# src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig #}
 
-{{ form_start(form) }}
+
 <div class="well">
   {{ form_start(form, {'attr': {'class': 'form-horizontal'},'method': 'POST'}) }}
   <div class="ticket_visitor">
-    <div class="row">
-      <div class="col-md-6 col-sm-6">
-        {{ form_row(form.nom) }}
+    <div class="form-group">
+        {{ form_label(form.nom, "Nom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        <div class="col-sm-10">
+        {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
       </div>
     </div>
 
-    <div class="row">                        
-      <div class="col-md-6 col-sm-6">
-        {{ form_row(form.prenom) }}
+    <div class="form-group">
+        {{ form_label(form.prenom, "Prénom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        <div class="col-sm-10">
+        {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
+      </div>
+    </div>
+
+    <div class="form-group">
+        {{ form_label(form.birthDate, "Date de naissance", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        <div class="col-sm-10">
+        {{ form_widget(form.birthDate, {'attr': {'class': 'form-control'}}) }}
+      </div>
+    </div>
+
+     <div class="form-group">
+        {{ form_label(form.pays, "Pays", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        <div class="col-sm-10">
+        {{ form_widget(form.pays, {'attr': {'class': 'form-control'}}) }}
       </div>
     </div>
     
-    <div class="row">
-      <div class="col-md-6 col-sm-6">
-        {{ form_row(form.birthDate) }}
+    <div class="form-group">
+        {{ form_label(form.reduced, "Tarif réduit", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        <div class="col-sm-1 col-sm-offset-8">
+        {{ form_widget(form.reduced, {'attr': {'class': 'form-control'}}) }}
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-6 col-sm-6">
-        {{ form_row(form.pays) }}
-      </div>
-    </div>
-  
-{{ form_row(form.reduced) }} 
-{{ form_widget(form) }}
 {{ form_end(form) }}
-
-    <input type="submit">
+    <div class="col-sm-2">
+      <input type="submit">
+    </div>
   </div>
 </div>
