--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -9,6 +9,42 @@
 
     {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
 
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modifyModal">
+  LModifier
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="modifyModal" tabindex="-1" role="dialog" aria-labelledby="modifyModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modifyModal">Modifier</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+  <div>
+    "Nombre de ticket"
+    <div class="col-sm-2">
+      <input type="text" value={{ ticket.nbTickets }}>
+    </div>
+  </div>
+
+ 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <button type="submit" action= "__controller/modifyTicket"class="btn btn-primary">Enregister modification</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <a href="{{ path('dao_ticketing_modifyTicket', {'id': ticket.id}) }}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Modifier</a>
+
+
 {% endblock %}
 
 
