--- a/src/DAO/TicketingBundle/Resources/views/Ticket/index.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/index.html.twig
@@ -3,7 +3,7 @@
 {% extends "DAOTicketingBundle::layout.html.twig" %}
 
 {% block daoticketing_body %}
-  
+<body>  
   <div class="well">
 
 
@@ -15,6 +15,7 @@
     Suivant
   </a>
   </div>
+  </body>
 {% endblock %}
 
 
