--- a/src/DAO/TicketingBundle/Resources/views/layout.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/layout.html.twig
@@ -18,19 +18,20 @@
      </section>
       <section class="row">
       <div class="col-sm-12"><p class="text-center"><img src="{{ asset('Images/logoLouvre.jpg') }}" alt="logo"/></div>
-      <div class="col-sm-12"><p class="text-center">Billeterie du Louvre</div>
+      <h1><div class="col-sm-12"><p class="text-center">Billeterie du Louvre</div></h1>
      </section>
      </br>
      </br>
     </section>
       <section class="row">
-        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreExterieur.jpg') }}" alt="logo" class="img-thumbnail"/></div>
-        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreEntree.jpg') }}" alt="logo"class="img-thumbnail"/></div>
-        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreCouloir.jpg') }}" alt="logo"class="img-thumbnail"/></div>
-        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreCentral.jpg') }}" alt="logo"class="img-thumbnail"/></div>
-        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreCouloir2.jpg') }}" alt="logo"class="img-thumbnail"/></div>
-        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreTableaux.jpg') }}" alt="logo"class="img-thumbnail"/></div>
-
+      	<div id="images">
+	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreExterieur.jpg') }}" alt="logo" class="img-thumbnail"/></div>
+	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreEntree.jpg') }}" alt="logo"class="img-thumbnail"/></div>
+	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreCouloir.jpg') }}" alt="logo"class="img-thumbnail"/></div>
+	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreCentral.jpg') }}" alt="logo"class="img-thumbnail"/></div>
+	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreCouloir2.jpg') }}" alt="logo"class="img-thumbnail"/></div>
+	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreTableaux.jpg') }}" alt="logo"class="img-thumbnail"/></div>
+        </div>
       </section>
   </head>
 
@@ -44,7 +45,7 @@
   <footer>
     <p>Projet 4, Billeterie du Louvre</p>
   </footer>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="{{ asset('js/icheck.min.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment-with-locales.min.js"></script>
