--- a/src/DAO/TicketingBundle/Resources/views/Ticket/recapitulatif.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/recapitulatif.html.twig
@@ -27,8 +27,12 @@
           <td>{{visitor.birthDate|date('d/m/Y') }}</td>
           <td>{{visitor.pays}}</td>
           <td>{{visitor.prix}} €</td>
+
+          <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modifyModal">
+            Modifier
+          </button></td>
           
-          <td class="text-center"><a href="{{ path('dao_ticketing_modifyVisitor', {'id': visitor.id}) }}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Supprimer</a></td>
+          <td class="text-center"><a href="{{ path('dao_ticketing_deleteVisitor', {'id': visitor.id}) }}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Supprimer</a></td>
         </tr>
         {% endfor %}
 
@@ -45,4 +49,38 @@
     </div>
   </div>
 </div>
+
+
+<!-- Modal -->
+{% for visitor in visitors %} 
+<div class="modal fade" id="modifyModal" tabindex="-1" role="dialog" aria-labelledby="modifyModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modifyModal">Modifier</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+  
+    <form id="edit_form" action="{{ path('dao_ticketing_modifyVisitor', {'id': visitor.id}) }}" method="POST">
+      Nom: <input type="text" name="nom" value={{ visitor.nom }}><br/>
+      Prénom: <input type="text" name="prenom" value={{ visitor.prenom }}><br/>
+      Date de naissance: <input type="datetime" name="birthDate" value={{ visitor.birthDate|date("Y/m/d") }}><br/>
+      Pays: <input type="text" name="pays" value={{ visitor.pays }}><br/>
+    
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <button type="submit" class="btn btn-primary">Enregister modification</button>
+      </div>
+    </div>
+    </form>
+  </div>
+</div>
+{% endfor %}
+
 {% endblock %}
+
