--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -11,7 +11,7 @@
 
     <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modifyModal">
-  LModifier
+  Modifier
 </button>
 
 <!-- Modal -->
@@ -27,7 +27,9 @@
       <div class="modal-body">
   
   	<form id="edit_form" action="{{ path('dao_ticketing_modifyTicket', {'id': ticket.id}) }}" method="POST">
+      Date de visite: <input type="datetime" name="dateResa" value={{ ticket.dateResa|date("m/d/Y") }}><br/>
       Nombre de ticket: <input type="text" name="nbTicket" value={{ ticket.nbTickets }}><br/>
+      Type de billet: <input type="text" name="nbTicket" value={{ ticket.nbTickets }}><br/>
     </form>
 
       </div>
@@ -38,9 +40,6 @@
     </div>
   </div>
 </div>
-
-    <a href="{{ path('dao_ticketing_modifyTicket', {'id': ticket.id}) }}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Modifier</a>
-
 
 {% endblock %}
 
