maj des modals et css

--- a/src/DAO/TicketingBundle/Resources/views/Ticket/recapitulatif.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/recapitulatif.html.twig
@@ -74,7 +74,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-        <button type="submit" class="btn btn-primary">Enregister modification</button>
+        <input type="submit" class="btn btn-primary">
       </div>
     </div>
     </form>
