--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form.html.twig
@@ -16,7 +16,7 @@
 
     <div class="col-sm-10">
       {# Génération de l'input. #}
-      {{ form_widget(form.dateResa, {'attr': {'class': 'form-control'}}) }}
+      {{ form_widget(form.dateResa, {'attr': {'class': 'form-control js-datepicker'}}) }}
     </div>
   </div>
 
